Final edits from Brill's suggestions

--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -51,10 +51,9 @@
 
 \maketitle
 \raggedbottom
-
+\vspace{-0.5cm}
 \begin{doublespacing}
   \begin{linenumbers}
-    
     \section*{Summary}
     Cilia are sensory organelles that are essential for human development
     and physiology \citep{satir2010primary, marshall2006cilia}.
@@ -63,11 +62,11 @@
     but can also act as motile propellers in certain cell types
     \citep{eley2005cilia}.
     A large number of genetic disorders linked to cilium dysfunction are
-    associated with proteins that localize to the cilium transition zone (TZ),
+    associated with proteins that localize to the ciliary transition zone (TZ),
     a structure at the base of cilia that regulates trafficking in and out
     of the cilium \citep{reiter2012base, szymanska2012transition}.
     Although substantial effort has been undertaken
-    to elucidate TZ proteins and their functions in cilium assembly and function
+    to elucidate TZ proteins and their roles in cilium assembly and function
     \citep{gonccalves2017ciliary},
     processes underlying maturation of TZs are not well understood.
     Here, we report a role for the membrane lipid
@@ -75,15 +74,15 @@
     (\PIP{}) in TZ maturation and length regulation
     in the \textit{Drosophila melanogaster} male germline.
     We show that reduction of cellular \PIP{} levels
-    by expression of the Salmonella phosphoinositide phosphatase SigD,
+    by expression of the Salmonella phosphoinositide phosphatase SigD
     or mutation of
-    the type I phosphatidylinositol phosphate kinase (PIPKI) Skittles (Sktl),
+    the type I phosphatidylinositol phosphate kinase (PIPKI) Skittles (Sktl)
     induces the formation of longer than normal TZs.
     These hyperelongated TZs exhibit signs of functional defects,
     such as the inability
     to be migratory \citep{basiri2014migrating} and loss of plasma membrane tethering.
     We also report that the \textit{onion rings} (\textit{onr}) allele
-    of the Drosophila Exo84
+    of Drosophila Exo84
     decouples TZ hyperelongation from loss of cilium-plasma membrane tethering.
     Our results reveal a requirement for \PIP{} in supporting ciliogenesis
     by promoting proper TZ maturation.
@@ -96,7 +95,7 @@
     \citep{marshall2006cilia, eley2005cilia, brooks2014multiciliated},
     for example, as the sperm flagellum.
     Consistent with their importance in cell signalling,
-    defects in cilium formation (i.e. ciliogenesis) are associated with genetic disorders
+    defects in cilium formation (i.e., ciliogenesis) are associated with genetic disorders
     known collectively as ciliopathies, which can display
     neurological defects \citep{valente2014primary},
     skeletal abnormalities \citep{hammarsjo2017novel},
@@ -123,7 +122,7 @@
     Ciliogenesis begins with assembly of a nascent TZ at the tip of
     the basal body \citep{reiter2012base}.
     This nascent TZ undergoes maturation, during which its structure and protein
-    composition changes, allowing for the
+    composition changes, allowing for
     establishment of a compartmentalized ciliary space, bounded by the ciliary membrane
     and the TZ, in which axoneme assembly and signalling can occur.
     The axoneme is a microtubule-based structure that forms the core of all cilia and flagella.
@@ -159,8 +158,9 @@
     and ion channels involved in mechanotransduction in Drosophila \citep{park2015ciliary}.
     In light of this current understanding of the role
     for \PIP{} as a modulator of cilium function,
-    we sought to investigate the cause of defects in axoneme assembly in Drosophila male germ cells
-    with reduced levels of \PIP{} from \citep{wei2008depletion}.
+    we sought to investigate the cause of defects we had observed
+    in axoneme assembly in Drosophila male germ cells
+    with reduced levels of \PIP{} \citep{wei2008depletion, fabian2010phosphatidylinositol}.
 
     %
     %   Results - 1
@@ -168,16 +168,16 @@
     \subsection*{\PIP{} is essential for transition zone maturation}
     To investigate how reduction of cellular \PIP{} affects ciliogenesis in the
     Drosophila male germline,
-    we used transgenic flies expressing the Salmonella phosphoinositide phosphatase SigD
+    we used transgenic flies expressing the Salmonella PIP phosphatase SigD
     under the control of spermatocyte-specific $\beta$\textsubscript{2}-tubulin promoter
     (referred to herein as \sigd{})
     \citep{wei2008depletion}.
     Note that \sigd{} corresponds to ``SigD-high'' in \citep{fabian2010phosphatidylinositol}.
     SigD dephosphorylates \PIP{} \textit{in vivo},
     and we previously showed that \sigd{} induces male sterility
-    due in part to defects in flagellar biosynthesis \citep{wei2008depletion}.
+    associated with defects in flagellar biosynthesis \citep{wei2008depletion}.
     To examine whether these defects were caused by aberrant TZ function,
-    we examined the localization of fluorescently-tagged versions of the
+    we examined localization of fluorescently-tagged versions of the
     centriolar/basal body protein
     Ana1 (homolog of CEP295) \citep{goshima2007genes, blachon2009proximal}
     and the conserved TZ protein Cep290 \citep{basiri2014migrating}
@@ -185,15 +185,15 @@
     Cep290 distribution appeared similar in control and \sigd{} in early G2 phase
     when TZs are still immature.
     In contrast, Cep290-labelled TZs were significantly longer in \sigd{}
-    compared to wild-type controls by the end of G2 phase following
+    compared to wild-type controls by the end of G2 phase, following
     the period of TZ maturation in spermatocytes (Figure 1B and 1C).
     Unlike Drosophila \textit{cep290} mutants, which contain
     longer than normal basal bodies \citep{basiri2014migrating},
     Ana1 length was not affected in \sigd{},
     and we did not observe a strong
     correlation between Cep290 and Ana1 lengths (Figure 1C).
-    We previously showed that the structure of basal bodies in \sigd{}
-    from electron microscopy is normal, and that the localization of the centriolar
+    We previously showed that ultrastructure of basal bodies in \sigd{}
+    is normal, and that localization of the centriolar
     marker GFP-PACT \citep{basto2006flies}
     is similar in controls and \sigd{} \citep{wei2008depletion}.
     In contrast, TZ proteins Chibby (Cby) \citep{enjolras2012drosophila} and
@@ -206,12 +206,12 @@
     and showed high intra-cyst correlation (\textgreater 0.95) suggestive
     of a dosage-based response to a shared cellular factor,
     presumably SigD.
-    Despite the persistence of hyperelongated TZs through meiosis,
+    Despite persistence of hyperelongated TZs through meiosis,
     axonemes, visualized by staining for acetylated tubulin, were able to
     elongate normally in post-meiotic cells (Figure 1E).
     However, as we showed previously, the ultrastructure of these axonemes
     is frequently aberrant,
-    either lacking symmetry completely or containing triplet microtubules
+    either lacking nine-fold symmetry or containing triplet microtubules
     in addition to the usual doublets \citep{wei2008depletion}.
 
     %
@@ -230,14 +230,14 @@
     using the same $\beta$\textsubscript{2}-tubulin promoter.
     We found that Sktl expression was able to suppress TZ hyperelongation
     in a cilium-autonomous manner (Figure 2A and 2B).
-    We also found that \textit{sktl} clones made
-    using Flp/FRT-based mitotic recombination and expressing the
+    We also found that \textit{sktl} clones, made
+    using FLP/FRT-based mitotic recombination and expressing the
     basal body and TZ marker Unc
-    \citep{baker2004mechanosensory, wei2008depletion}
+    \citep{baker2004mechanosensory, wei2008depletion},
     exhibited TZ hyperelongation at a low penetrance (Figure 2C),
     suggesting that Sktl is important for TZ maturation.
     Note that the \textit{sktl}$^{2.3}$ allele used for making mitotic clones
-    is a hypomorph \citep{gervais2008pip5k}.
+    is hypomorphic \citep{gervais2008pip5k}.
 
     A previous report showed the vertebrate PIPKI$\gamma$ to be
     important for cilium formation in cultured cell lines
@@ -256,7 +256,7 @@
     but not TZ assembly. 
     Notably, neither inactivation nor overexpression of \textit{cp110} affects
     cilium formation in Drosophila, and Cp110
-    and is removed from basal bodies in the earliest stages of G2 phase in the Drosophila male germline
+    is removed from basal bodies in the earliest stages of G2 phase in the Drosophila male germline
     \citep{franz2013cp110}.
     
     %
@@ -278,7 +278,8 @@
     We previously described ``comet-shaped'' localization of Unc-GFP in these cells
     \citep{wei2008depletion},
     and we find that these hyperelongated Unc signals persist during cellular elongation
-    despite elongation of the axoneme (Figure 3A bottommost panel and Figure 1E).
+    (Figure 3A, bottommost panel)
+    despite elongation of the axoneme (Figure 1E).
 
     In Drosophila and humans, basal bodies consist of microtubule triplets
     \citep{jana2016drosophila, lattao2017centrioles},
@@ -291,14 +292,14 @@
     of TZs marked with Cep290 (Figure 3C).
     We found that treatment of germ cells with Taxol, as in \citep{riparbelli2013unique},
     could increase the penetrance of this phenotype from <5\% in untreated cells
-    to \textgreater25\% in cells treated with 4 $\mu$M Taxol (Figure 3D)
+    to \textgreater25\% in cells treated with 4 $\mu$M Taxol (arrowheads in Figure 3D)
     without affecting Cep290 length significantly (Figure 3E).
-    Taxol treatment stabilizes microtubules and is thought to disrupt TZ maturation
-    by inhibiting microtubule rearrangements \citep{riparbelli2012assembly}.
-    Taxol treatment alone did not induce this phenotype in wild-type controls in our hands
-    at varying concentrations ($p$ <0.01 at 5\% penetrance).
-    Triplet microtubules within the axoneme are also observed in Taxol-treated cells
-    \citep{riparbelli2013unique}, further supporting a relationship between
+    Wild-type controls treated with Taxol did not exhibit TZ-distal Ana1 puncta ($p$ <0.01 at 5\% penetrance).
+    Taxol, a microtubule-stablizing drug, has been hypothesized to disrupt TZ maturation
+    by inhibiting microtubule rearrangements in the Drosophila male germline \citep{riparbelli2012assembly, riparbelli2013unique}.
+    Taxol-treated male germ cells assemble extremely long axonemes as assessed by acetylated tubulin staining \citep{riparbelli2013unique}.
+    Similar to \sigd{}, these axonemes contain triplet microtubules
+    \citep{riparbelli2013unique}, further indicating a functional relationship between
     \PIP{} and microtubule reorganization in TZ maturation.
     Fluorescently-tagged Asterless (homolog of CEP152), a pericentriolar protein
     \citep{blachon2008drosophila, dzhindzhev2010asterless},
@@ -317,21 +318,23 @@
     \PIP{} and regulates membrane trafficking at the plasma membrane.
     To investigate whether defects in TZ hyperelongation could be explained by
     defective Exo84 function, we examined TZs in \textit{onr} mutants.
-    Unlike \sigd{}, the \textit{onr} mutant did not display hyperelongated TZs (Figure 4C),
+    Unlike \sigd{}, \textit{onr} did not display hyperelongated TZs (Figure 4C),
     suggesting that Exo84 is dispensable for TZ maturation.
 
-    Due to involvement of exocyst in membrane trafficking at the plasma membrane,
+    Due to involvement of the exocyst in membrane trafficking at the plasma membrane,
     we examined whether cilium-associated membranes were affected in \sigd{}
-    or \textit{onr} mutants in a manner similar to \textit{dila; cby} mutants
-    \citep{vieillard2016transition}.
-    Whereas TZs in \sigd{} and \textit{onr} cells anchored properly
-    to the plasma membrane, they were unable to maintain
-    membrane connections, and were rendered cytoplasmic (Figure 4A and B) similar to
+    or \textit{onr} mutants in a manner similar to \textit{dilatory; cby} mutants
+    \citep{vieillard2016transition}. 
+    Dilatory (Dila) is a conserved TZ protein that cooperates with Cby to assemble the TZ in
+    the Drosophila male germline \citep{vieillard2016transition}.
+    Whereas TZs in \sigd{} and \textit{onr} cells were able to dock
+    at the plasma membrane initially, they were unable to maintain
+    membrane connections, and were rendered cytoplasmic (Figure 4A and B) similar to TZs in
     \textit{dila; cby} mutants.
     Although we were not able to determine the localization of Exo84 due to the
     lack of available reagents,
     we found that GFP-tagged Exo70 localized to centrioles (Figure 4D).
-    Exo70 can directly bind to \PIP{} and mediates the recruitment of
+    Exo70 can directly bind to \PIP{} and mediates recruitment of
     the exocyst complex to the plasma membrane \citep{he2007exo70}.
     Our results suggest that the exocyst, and Exo84 in particular, regulates
     cilium-membrane associations, similar to \PIP{}, and that TZ hyperelongation and loss of
@@ -343,25 +346,25 @@
     requires orchestration of various proteins and cellular pathways
     \citep{reiter2012base, gonccalves2017ciliary}.
     In the Drosophila male germline, TZ maturation occurs during the
-    extended G2 phase in spermatocytes prior to meiosis, and can be readily
+    extended G2 phase in mature primary spermatocytes prior to meiosis, and can be readily
     observed by an increase in TZ length using fluorescence microscopy.
     Our results suggest that normal execution of this process
-    requires \PIP{}, and that depletion of \PIP{} induces TZs to
+    requires \PIP{} and that depletion of \PIP{} induces TZs to
     grow longer than normal.
     Regulation of TZ length in the Drosophila male germline has been reported
     previously.
     For example, \textit{mks1} mutants have shorter TZs \citep{pratt2016drosophila},
     whereas
-    \textit{cby; dila} and \textit{cby} mutants display hyperelongated TZs
+    \textit{dila; cby} and \textit{cby} mutants display hyperelongated TZs
     \citep{enjolras2012drosophila,vieillard2016transition}.
-    Since both Cby and Mks1 are hyperelongated in \sigd{} cells,
+    Because both Cby and Mks1 are hyperelongated in \sigd{} cells,
     \PIP{} seems to be intimately involved in this process as well, but it does
-    so independantly of Cby and Mks1.
+    so independently of an effect on Cby or Mks1 recruitment.
 
     The majority of \PIP{} at the plasma membrane is produced by PIPKIs
     \citep{balla2013phosphoinositides, hammond2012pi4p}
     and these seem to have a conserved role at cilia.
-    In this study, we showed that mutation of the PIPKI Skittles (Sktl)
+    In this study, we showed that mutation of the PIPKI Sktl
     induced hyperelongated TZs, similar to SigD expression.
     We were able rescue TZ hyperelongation in \sigd{} by expression of full-length Sktl.
     Interestingly, some cells showed cilium-autonomous suppression of TZ length.
@@ -372,7 +375,7 @@
     In humans, \textit{PIPKI$\gamma$} is linked to lethal congenital contractural
     syndrome type 3 (LCCS3), which has been suggested to represent a ciliopathy.
     The recent discovery of the role of LCCS1-associated GLE1 protein in cilium
-    function \citep{jao2017role} further supports this hypothesis.
+    function \citep{jao2017role} corroborates this hypothesis.
     Our data support the idea that PIPKIs might represent ciliopathy-associated genes
     or genetic modifiers of disease, as previously postulated
     \citep{xu2016phosphatidylinositol}.
@@ -383,10 +386,9 @@
     Firstly, we show that hyperelongated TZs are unable to
     detach from basal bodies at the onset of axoneme elongation
     in spermatids, unlike TZs in normal cells \citep{basiri2014migrating, fabian2012drosophila}.
-    Nonetheless, axonemes can assemble despite the lack of a functional
+    Nonetheless, axonemes can assemble, albeit with aberrant ultrastructure \citep{wei2008depletion},
+    despite the lack of a functional
     TZ or membrane association in \sigd{} cells.
-    As we previously reported, these axonemes frequently exhibit aberrant
-    ultrastructure \citep{wei2008depletion}.
     This is similar to \textit{cep290} \citep{basiri2014migrating}
     and \textit{dila}; \textit{cby} \citep{vieillard2016transition}
     mutants,
@@ -395,7 +397,7 @@
     
     We also report a novel phenotype of TZ-distal Ana1 localization
     in \sigd{} cells.
-    In flies, Ana1 is important for centriole elongation
+    In Drosophila, Ana1 is important for centriole elongation
     \citep{saurya2016drosophila}.
     The human ortholog of Ana1, called CEP295, regulates
     centriole elongation by building the distal centriole and
@@ -416,18 +418,18 @@
     important for centrosome formation and centriole duplication, did not
     exhibit this TZ-distal localization.
     This may be due to several reasons, such as different dynamics of Ana1 and Asl
-    loading onto centrioles \citep{fu2016conserved, saurya2016drosophila} and the
+    loading onto centrioles \citep{fu2016conserved, saurya2016drosophila} or the
     more peripheral nature of Asl within the centriole \citep{blachon2008drosophila}.
     
-    Members of the exocyst complex, such as Sec10 and Sec6, are
+    Members of the exocyst complex such as Sec10 and Sec8 are
     important for cilium formation in cultured cell lines and zebrafish
     \citep{zuo2009exocyst, lobo2017exocyst, seixas2016arl13b},
-    but their precise roles in ciliogenesis are not well-understood.
+    but their precise roles in ciliogenesis are not well understood.
     The subunits Sec3 and Exo70 regulate exocyst targeting to the plasma
     membrane through a direct interaction with \PIP{}
     \citep{he2007exo70, zhang2008membrane}.
     We previously showed that
-    the \textit{onr} allele of Drosophila \textit{Exo84} phenocopied
+    the \textit{onr} allele of Drosophila \textit{Exo84} phenocopies
     defects in cell polarity and elongation observed in \sigd{}
     \citep{fabian2010phosphatidylinositol}.
     Here, we show that the \textit{onr} allele of the Drosophila Exo84
@@ -469,7 +471,7 @@
     \subsection*{Antibodies}
     The following primary antibodies were used for immunofluorescence
     at the indicated concentrations ---
-    chicken anti-GFP IgY (abcam) 1:1000;
+    chicken anti-GFP IgY (abcam), 1:1000;
     rat anti-RFP IgG (5F8, ChromoTek), 1:1000;
     rabbit anti-Centrin (C7736, Sigma-Aldrich), 1:500;
     mouse anti-acetylated $\alpha$-tubulin 6-11-B (Sigma-Aldrich), 1:1000.
@@ -481,19 +483,20 @@
     \subsection*{Fluorescence microscopy}
     For live imaging, testes were dissected in phosphate buffered saline (PBS).
     To stain for DNA, intact testes were incubated in PBS with
-    Hoechst (1:5000) for 5 minutes.
-    Testes were transferred to a polylysine-coated glass slide in a drop of PBS,
+    Hoechst 33342 (1:5000) for 5 minutes.
+    Testes were transferred to a polylysine-coated glass slide (Thermo Fisher Scientific) in a drop of PBS,
     ruptured using a syringe needle and
     squashed under a glass coverslip using Kimwipes.
     The edges of the coverslip were sealed with nail polish
-    and the specimen was visualized using an epifluorescence microscope.
+    and the specimen was visualized using an epifluorescence microscope (Zeiss Axioplan 2)
+    with an Axiocam CCD camera.
     Cells were examined live whenever possible to avoid artefacts from immunostaining.
 
     For Taxol treatments, testes from larvae or pupae expressing
     Ana1-tdTomato; Cep290-GFP were
     dissected into Shields and Sang M3 medium (Sigma-Aldrich) supplemented
     with a predefined
-    concentration of Taxol (Sigma-Aldrich)
+    concentration of Taxol (Sigma-Aldrich) in DMSO
     and incubated overnight in a humidified sterile
     chamber in the dark at room temperature.
     These were then squashed in PBS and imaged live.
@@ -504,16 +507,16 @@
     CellMask Deep Red (Invitrogen) solution (20 $\mu$g/mL) was added to the medium dropwise
     immediately before visualization under a confocal microscope.
 
-    For immunochemistry, testes were dissected in PBS,
+    For immunocytochemistry, testes were dissected in PBS,
     transferred to a polylysine-coated glass slide in a drop of PBS,
     ruptured with a needle, squashed and frozen in liquid nitrogen for 5 minutes.
-    These slides were transferred to ice-cold methanol for 5-10 minutes for fixation.
+    Slides were transferred to ice-cold methanol for 5-10 minutes for fixation.
     Samples were then permeabilized and blocked in PBS with 0.1\% Triton-X and 0.3\% bovine
     serum albumin, and incubated with primary antibodies overnight at 4$^{\circ}$C,
     followed by three 5-minute washes with PBS, 1 hour incubation
     with secondary antibodies, and three 5-minute washes with PBS.
     Samples were mounted in Dako (Agilent) and imaged with
-    a Leica widefield microscope
+    a Zeiss Axioplan 2 epifluorescence microscope
     or Nikon A1R scanning confocal microscope (SickKids imaging facility).
 
     \subsection*{Statistical methods}
@@ -532,7 +535,7 @@
 
     \subsection*{Phylogenetic analysis}
     Candidate orthologs of Skittles and PIP5K9B were queried
-    from Inparanoid (version 8.0) and FlyBase (version 2.0).
+    from Inparanoid (version 8.0) and FlyBase (version FB2017\_05).
     Poorly annotated protein sequences were confirmed
     to encode type I phosphatidylinositol phosphate
     kinases using reciprocal BLAST search.
@@ -583,21 +586,21 @@
       White arrowheads mark rescued Cep290 distribution for comparison.
     \item Quantification of Cep290 and Ana1 lengths from control, \sigd{} and $\beta$\textsubscript{2}t-YFP-Sktl; \sigd{} from (A).
     \item \textit{sktl}$^{2.3}$ clones exhibit TZ hyperelongation (white arrowheads). Cilia are marked using
-      Unc-GFP. The plot on the right shows quantification of Unc-GFP lengths in control and \sigd{}
+      Unc-GFP. The plot on the right shows quantification of Unc-GFP lengths in control, \textit{sktl}$^{2.3}$ and \sigd{}
       spermatocytes at late G2 phase ($n$ >30).
     \item Phylogenetic tree of PIP5Ks showing conservation of cilium-associated functions.
       The scale bar (bottom) represents expected amino acid substitutions per site and branch support values are shown in red (a value of 1 indicates maximum support).
-      Black arrows represent previous evidence of involvement in cilium-associated functions from \citep{xu2016phosphatidylinositol}.
+      Black arrows represent previous evidence of involvement in cilium-associated functions (from \citep{xu2016phosphatidylinositol}).
       Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongylocentrotus purpuratus}), Amel (\textit{Apis mellifera}), Aaeg (\textit{Aedes aegypti}), Dana (\textit{Drosophila ananassae}), Dmel (\textit{Drosophila melanogaster}), Hsap (\textit{Homo sapiens}), Mmus (\textit{Mus musculus}), Xtro (\textit{Xenopus tropicalis}), Cint (\textit{Ciona intestinalis}), Scer (\textit{Saccharomyces cerevisiae}).
     \end{enumerate}
     \bigskip
     \textbf{\itshape Figure 3. Hyperelongated transition zones display functional defects.}
     \begin{enumerate}[label={(\Alph*)}, nolistsep]
-    \item GFP-tagged Unc is unable to detach from the basal body and migrate (white arrowhead) in spermatids expressing \sigd{}.
-      Cell elongation in spermatids is concomitant with elongation of the mitochondrial derivative (dark organelles in the phase contrast images).
-      Insets show phase contrast images corresponding to the region shown in the fluorescence images.
+    \item GFP-tagged Unc is unable to detach from the basal body and migrate in spermatids expressing \sigd{} (white arrowhead).
+      Cell elongation in spermatids is concomitant with elongation of the mitochondrial derivative (dark organelles in the phase-contrast images).
+      Insets show phase-contrast images corresponding to the region shown in the fluorescence images.
     \item Cep290 is unable to detach and migrate from the basal body at the onset of axoneme assembly in \sigd{} spermatids.
-      Insets show phase contrast images corresponding to the region shown in the fluorescence images with the
+      Insets show phase contrast images corresponding to the region shown in the fluorescence images, with the
       elongating mitochondrial derivative delineated by a yellow dashed line.
     \item Structured illumination micrographs of \sigd{} cells showing TZ-distal puncta of the centriolar protein Ana1 (yellow arrowheads).
     \item Treatment of control and \sigd{} cells with the microtubule stabilizing drug Taxol.
@@ -612,7 +615,7 @@
     \item Cells expressing \sigd{} fail to maintain plasma membrane-cilium tethering despite initially anchoring to the plasma membrane.
       The plasma membrane is marked with CellMask, a cell impermeable dye.
     \item \textit{onr} mutants do not maintain plasma membrane-cilium tethering.
-    \item Cells mutant for \textit{onr} do not display hyperelongated acetylated tubulin signal (white arrowheads) at the cilium.
+    \item Cells mutant for \textit{onr} do not display hyperelongated acetylated tubulin signal at the cilium (white arrowhead).
       Acetylated tubulin marks the axoneme, which colocalizes with the TZ in spermatocytes \citep{pratt2016drosophila}.
     \item GFP-tagged Exo70 localizes to basal bodies in spermatocytes.
     \end{enumerate}
